fix: add flex wrap

--- a/src/forms/CheckboxGroup.scss
+++ b/src/forms/CheckboxGroup.scss
@@ -2,6 +2,7 @@
   --inner-button-gap: var(--seeds-s3);
   display: flex;
   gap: var(--inner-button-gap);
+  flex-wrap: wrap;
 }
 
 .seeds-checkbox-hide {
